fix: add pve and pvp support
