# BattleShip.Models/Contracts/PlayerTokenHeaders.cs
@@ -1,0 +1,6 @@
+namespace BattleShip.Models.Contracts;
+
+public static class PlayerTokenHeaders
+{
+    public const string HeaderName = "X-Player-Token";
+}
